@@ -1,22 +1,32 @@
 package side.onetime.dto.event.response;
 
-import com.fasterxml.jackson.annotation.JsonInclude;
-import com.fasterxml.jackson.databind.PropertyNamingStrategies;
-import com.fasterxml.jackson.databind.annotation.JsonNaming;
 import side.onetime.domain.Member;
 import side.onetime.domain.User;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@JsonNaming(value = PropertyNamingStrategies.SnakeCaseStrategy.class)
-@JsonInclude(JsonInclude.Include.NON_NULL)
 public record GetParticipantsResponse(
-        List<String> names
+        List<Participant> members,
+        List<Participant> users
 ) {
+    public record Participant(
+            long id,
+            String name
+    ) {
+        public static Participant of(long id, String name) {
+            return new Participant(id, name);
+        }
+    }
+
     public static GetParticipantsResponse of(List<Member> members, List<User> users) {
-        List<String> names = members.stream().map(Member::getName).collect(Collectors.toList());
-        names.addAll(users.stream().map(User::getNickname).toList());
-        return new GetParticipantsResponse(names);
+        List<Participant> memberList = members.stream()
+                .map(member -> Participant.of(member.getId(), member.getName()))
+                .toList();
+
+        List<Participant> userList = users.stream()
+                .map(user -> Participant.of(user.getId(), user.getNickname()))
+                .toList();
+
+        return new GetParticipantsResponse(memberList, userList);
     }
 }
